fixed mainpage visibility

--- a/public/style/base.css
+++ b/public/style/base.css
@@ -95,6 +95,7 @@ spacer {
 .content.mainpage {
     padding: 0 40px;
     color: var(--root-txt-clr);
+    opacity: 1
 }
 
 .content pre {
